springDemoApp/service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-service
spec:
  type: LoadBalancer
  selector:
    app: sample-spring-app
  ports:
    - protocol: "TCP"
      port: 8100
      targetPort: 8100
